add node commands to cli
