# server/docs/swagger.json
@@ -4228,6 +4228,11 @@
                     "type": "string",
                     "example": "Handles user service requests"
                 },
+                "error": {
+                    "description": "Optional: Error message if the deployment encounters an issue",
+                    "type": "string",
+                    "example": "Failed to pull image"
+                },
                 "id": {
                     "description": "ID of the deployment (e.g., \"depl_dbOdi5eLQK\")",
                     "type": "string",
@@ -4250,6 +4255,15 @@
                         }
                     ]
                 },
+                "status": {
+                    "description": "Current status of the deployment (e.g., \"OK\", \"Error\", \"Pending\")",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/deploy_svc.DeploymentStatus"
+                        }
+                    ],
+                    "example": "OK"
+                },
                 "strategy": {
                     "description": "Deployment strategy (e.g., rolling update)",
                     "allOf": [
@@ -4266,6 +4280,23 @@
                     }
                 }
             }
+        },
+        "deploy_svc.DeploymentStatus": {
+            "type": "string",
+            "enum": [
+                "OK",
+                "Error",
+                "Pending",
+                "Failed",
+                "Deploying"
+            ],
+            "x-enum-varnames": [
+                "StatusOK",
+                "StatusError",
+                "StatusPending",
+                "StatusFailed",
+                "StatusDeploying"
+            ]
         },
         "deploy_svc.DeploymentStrategy": {
             "type": "object",
